--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gestiondestock">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,9 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GestionDeStock">
-        <activity android:name=".vue.TransactionActivity"></activity>
+        <activity android:name=".vue.AddArticleActivity"></activity>
+        <activity android:name=".vue.TransactionActivity" />
         <activity android:name=".vue.FournisseurActivity" />
         <activity android:name=".vue.InventaireActivity" />
+        <activity android:name=".vue.AddFournisseurActivity" />
         <activity android:name=".vue.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
